<resources>
    <string name="app_name">ExamenFinal</string>
    <string name="actividad1">Actividad1</string>
    <string name="actividad2">Actividad2</string>
    <string name="salir">Salir</string>
    <string name="mi_base_de_datos_de_libros">Mi Base de Datos de Libros</string>
    <string name="nuevo_libro">nuevo libro</string>
    <string name="listado_libros">listado libros</string>
    <string name="volver">volver</string>
    <string name="datos_nuevo_libro">DATOS NUEVO LIBRO</string>
    <string name="titulo">TITULO</string>
    <string name="autor">AUTOR</string>
    <string name="isbn">ISBN</string>
    <string name="editorial">EDITORIAL</string>
    <string name="num_paginas">NUM.PAGINAS</string>
    <string name="leido">LEIDO</string>
    <string name="insertar">INSERTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="listado_de_libros">Listado de Libros</string>
    <string name="leidos">Leidos</string>
    <string name="por_leer">Por Leer</string>
    <string name="informacion_detallada_del_libro">INFORMACION DETALLADA DEL LIBRO</string>
    <string name="paginas">Paginas</string>
    <string name="libro">Libro:</string>
    <string name="eliminar">Eliminar</string>
    <string name="lIBROleidos">lIBRO LEIDO</string>
    <string name="LIBROpor_leer">LIBRO POR LEER</string>
    <string name="fehca_hora">FECHA / HORA:</string>
    <string name="temperatura">TEMPERATURA:</string>
    <string name="titulo2">titulo</string>
    <string name="autor2">autor</string>
    <string name="aditorial2">editorial</string>
    <string name="el_tiempo">El Tiempo</string>
    <string name="elige_localidad">Elige localidad</string>
    <string name="tiempo_en">Tiempo en:</string>
    <string name="titulo3">titulo</string>
    <string name="autor3">autor</string>
    <string name="editorial3">editorial</string>
    <string name="isbn3">isbn</string>
    <string name="num3">numPag</string>
    <string name="leido3">leido</string>
    <string name="titulo4">titulo</string>
    <string name="autor4">autor</string>
    <string name="editoral4">editorial</string>
    <string name="isbn4">isbn</string>
    <string name="leido4">leido</string>
    <string name="numpag4">numPag</string>
    <string name="adios">CERRANDO</string>
    <string name="mensajeAdios">¿Desea Salir?</string>
</resources>