<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BBDD">


    <TextView
        android:id="@+id/tituloBBDD"
        android:layout_width="256dp"
        android:layout_height="77dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="64dp"
        android:text="@string/mi_base_de_datos_de_libros"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNuevoLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="68dp"
        android:text="@string/nuevo_libro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloBBDD" />

    <Button
        android:id="@+id/btnListadoLibros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="64dp"
        android:text="@string/listado_libros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevoLibro" />

    <Button
        android:id="@+id/btnSalirBBDD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="128dp"
        android:text="@string/volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListadoLibros" />


</androidx.constraintlayout.widget.ConstraintLayout>